<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">
    <TextView
            android:id="@+id/accountLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:textSize="24sp"/>

    <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/accountSg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/accountLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp">
        <RadioButton
                android:id="@+id/chiyoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chiyo"
                android:tag="0"
                android:checked="true"
                style="@style/RadioButton" />
        <RadioButton
                android:id="@+id/eruRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eru"
                android:tag="1"
                style="@style/RadioButton"/>
        <RadioButton
                android:id="@+id/otomeRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/otome"
                android:tag="2"
                style="@style/RadioButton"/>
    </info.hoang8f.android.segmented.SegmentedGroup>

    <TextView
            android:id="@+id/roomLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/accountSg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:textSize="24sp"/>

    <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/roomSg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/roomLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp">
        <RadioButton
                android:id="@+id/tunaRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tuna"
                android:tag="0"
                android:checked="true"
                style="@style/RadioButton"/>
        <RadioButton
                android:id="@+id/eggRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/egg"
                android:tag="1"
                style="@style/RadioButton"/>
        <RadioButton
                android:id="@+id/salmonRoeRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salmon_roe"
                android:tag="2"
                style="@style/RadioButton"/>
    </info.hoang8f.android.segmented.SegmentedGroup>

    <Button
            android:id="@+id/subscribeButton"
            android:text="@string/subscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/roomSg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>