<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.BarkActivity">
    <android.support.constraint.Guideline
            android:id="@+id/horizontal_guideline"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.3" />
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
            android:id="@+id/accountLabel"
            android:text="@string/user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/horizontal_guideline"/>
    <TextView
            android:id="@+id/accountNameLabel"
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/accountLabel"
            app:layout_constraintStart_toEndOf="@id/horizontal_guideline"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/roomLabel"
            android:text="@string/room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/accountLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/horizontal_guideline"/>
    <TextView
            android:id="@+id/roomNameLabel"
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@id/accountNameLabel"
            app:layout_constraintStart_toEndOf="@id/horizontal_guideline"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/bawBawButton"
            android:text="@string/bawbaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/roomNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/WaooonButton" />
    <Button
            android:id="@+id/WaooonButton"
            android:text="@string/waooon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/bawBawButton"
            app:layout_constraintStart_toEndOf="@id/bawBawButton"
            app:layout_constraintEnd_toStartOf="@id/mumblingButton" />
    <Button
            android:id="@+id/mumblingButton"
            android:text="@string/mumbling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/bawBawButton"
            app:layout_constraintStart_toEndOf="@id/WaooonButton"
            app:layout_constraintEnd_toEndOf="parent" />

    <com.devnokiyo.actioncableapp.views.UserStatusView
            android:id="@+id/chiyoUsv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/bawBawButton"
            app:layout_constraintBottom_toTopOf="@id/eruUsv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    <com.devnokiyo.actioncableapp.views.UserStatusView
            android:id="@+id/eruUsv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/chiyoUsv"
            app:layout_constraintBottom_toTopOf="@id/otomeUsv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    <com.devnokiyo.actioncableapp.views.UserStatusView
            android:id="@+id/otomeUsv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/eruUsv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>